--- a/public/assets/tpl/dashboard.html
+++ b/public/assets/tpl/dashboard.html
@@ -4,12 +4,6 @@
     <div class="col-sm-12 col-md-12 col-lg-9" style="background:#F9F9F9;">
 
       <div class="p-20 clearfix">
-        <div class="pull-right">
-          <a href="pages/material-bird.html" target="_blank" class="btn btn-round-sm btn-link" bs-tooltip title="Play material bird"><i class="md md-games"></i></a>
-          <div class="btn btn-round-sm btn-link" bs-tooltip title="Upload media"><i class="md md-crop-original"></i></div>
-          <div class="btn btn-round-sm btn-link" bs-tooltip title="Write new document"><i class="md md-insert-drive-file"></i></div>
-          <div class="btn btn-round-sm btn-link" bs-tooltip title="Add new user"><i class="md md-person-add"></i></div>
-        </div>
         <h4 class="grey-text">
           <i class="md md-dashboard"></i>
           <span class="hidden-xs">Dashboard</span>
@@ -45,19 +39,38 @@
               </div>
             </div>
             <div class="col-md-6">
-              <div class="well white">
-                <form class="form-floating">
-                  <fieldset>
-                    <span class="help-block mw400">Packages</span>
-                    <div ng-repeat="package in selected_product.packages">
-                        <div class="form-group">
-                          <input class="form-control" id="focusedInput" type="text" ng-model="selected_product.article_id" value="{{selected_product.article_id}}">
-                          <label class="control-label" for="focusedInput">Article ID/No</label>
-                        </div>
-                    </div>
-                  </fieldset>
+              <div class="table-responsive white">
+                  <h3 class="table-title p-20">Packages</h3>
 
-                </form>
+                  <table class="table table-full table-full-small">
+                    <colgroup>
+                      <col class="auto-cell-size p-r-20" />
+                    </colgroup>
+                    <thead>
+                        <tr>
+                          <th>ID</th>
+                          <th>W</th>
+                          <th>H</th>
+                          <th>L</th>
+                          <th>Weight</th>
+                          <th>Diameter</th>
+                          <th>Total</th>
+                          <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr ng-repeat="(key, item) in selected_product.packages">
+                          <td><a ng-click="editPackage()">{{ item.article_id }}</a></td>
+                          <td>{{item.width}}</td>
+                          <td>{{ item.height }}</td>
+                          <td>{{ item.length }}</td>
+                          <td>{{ item.weight }}</td>
+                          <td>{{ item.diameter }}</td>
+                          <td>{{ item.total }}</td>
+                          <td></td>
+                        </tr>
+                    </tbody>
+                  </table>
               </div>
             </div>
         </div>
@@ -78,7 +91,7 @@
                       <th>ID</th>
                       <th>Product</th>
                       <th>Packages</th>
-                      <th>Link</th>
+                      <th>Actions</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -87,7 +100,10 @@
                       <td>{{ item.article_id }}</a></td>
                       <td><a ng-click="selectProduct(item)">{{ item.name }}</a></td>
                       <td>{{ item.packages.length }}</td>
-                      <td><a target="_blank" ng-href="{{item.url}}">View</a></td>
+                      <td>
+                          <button type="button" class="btn btn-xs btn-round btn-info" ng-click="openURL(item.url)"><span class="md md-launch"></span><div class="ripple-wrapper"></div></button>
+                          <button type="button" class="btn btn-xs btn-round btn-success" ng-click="addProductToQuote(item)"><span class="md md-add"></span><div class="ripple-wrapper"></div></button>
+                      </td>
                     </tr>
                     </tbody>
                   </table>
@@ -108,7 +124,7 @@
         </div>
         
 
-        <div class="grey-text small p-t-20" ng-cloak>Automation System - v{{APP.version}}</div>
+        <div class="grey-text small p-t-20" ng-cloak>JACE - v{{APP.version}}</div>
       </div>
     </div>
 
@@ -131,41 +147,24 @@
               </button>
             </li>
         </div>
-        <h4 class="grey-text m-b-30">Action feed</h4>
+        <h4 class="grey-text m-b-30">Quote</h4>
 
         <div class="card">
           <div class="p-10 p-l-20 p-r-20 clearfix">
-            <div class="badge pull-right">10</div>
-            <div class="w600 f11 grey-text">Insights</div>
+            <div class="badge pull-right">{{quoteItems.length}}</div>
+            <div class="w600 f11 grey-text"><a>New Quote</a></div>
           </div>
           <div class="table-responsive">
             <table class="table table-small grey-text">
               <colgroup>
                 <col width="">
-                <col width="60" />
-                <col width="50" />
+                <col width="" />
               </colgroup>
               <tbody>
-              <tr>
-                <td>Weekly sales</td>
-                <td>43</td>
-                <td><i class="md md-arrow-drop-up green-text"></i></td>
-              </tr>
-              <tr>
-                <td>Weekly profits</td>
-                <td>$4181,-</td>
-                <td><i class="md md-arrow-drop-up green-text"></i></td>
-              </tr>
-              <tr>
-                <td>Monthly visits</td>
-                <td>14000</td>
-                <td><i class="md md-arrow-drop-down red-text"></i></td>
-              </tr>
-              <tr>
-                <td>Bounce rate</td>
-                <td>40%</td>
-                <td><i class="md md-arrow-drop-up green-text"></i></td>
-              </tr>
+                  <tr ng-repeat="item in quoteItems track by $index">
+                    <td>{{item.article_id}} - {{item.name}}</td>
+                    <td>{{item.price}}</td>
+                  </tr>
               </tbody>
             </table>
           </div>
