added quote calculations

--- a/public/assets/tpl/dashboard.html
+++ b/public/assets/tpl/dashboard.html
@@ -149,7 +149,7 @@
         <div class="card">
           <div class="p-10 p-l-20 p-r-20 clearfix">
             <div class="badge pull-right">{{quoteItems.length}}</div>
-            <div class="w600 f11 grey-text"><a>New Quote</a></div>
+            <div class="w600 f11 grey-text"><a href="#/quote_detail">New Quote</a></div>
           </div>
           <div class="table-responsive">
             <table class="table table-small grey-text">
