--- a/public/assets/tpl/dashboard.html
+++ b/public/assets/tpl/dashboard.html
@@ -13,7 +13,7 @@
       <div class="p-20 no-p-t">
         <div class="card">
             <div class="table-search">
-              <input type="text" class="form-control" ng-model="product_keyword" my-enter="searchProduct(product_keyword)" placeholder="Search Product" autofocus />
+              <input type="text" class="form-control" ng-model="product_keyword" my-enter="searchProduct(product_keyword)" placeholder="Search SKU" autofocus />
             </div>
         </div>
           
